extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/parser/enumerr3a.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/enum/parser/enumerr3a.obr:6:18:error: ')' expected but 'b' found
    x : ( harold bob );
                 ^
